--- a/biblio/index.html
+++ b/biblio/index.html
@@ -14,7 +14,18 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="categorias.html">Categorias</a></li>
+                <li>
+                    <div class="dropdown">
+                        <button class="dropbtn">Categorias</button>
+                        <div class="dropdown-content">
+                            <a href="#" data-categoria="Fiction">Ficção</a>
+                            <a href="#" data-categoria="Romance">Romance</a>
+                            <a href="#" data-categoria="Technology">Tecnologia</a>
+                            <a href="#" data-categoria="History">História</a>
+                            <a href="#" data-categoria="Science">Ciência</a>
+                        </div>
+                    </div>
+                </li>
                 <li><a href="#conta">Conta</a></li>
             </ul>
         </nav>
